# media-compressor-web

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: README.md  package.json
app/src/: styles.css
app/src/presets/: default.json
app/src/store/: presets.ts  queue.ts
app/src/ui/: App.tsx  Dropzone.tsx  PresetSelect.tsx  QueueList.tsx
app/src/utils/: size.ts
docs/: ci-badge-snippet.md  overview.md
presets/: README.md
src-tauri/: Cargo.toml  README.md
src-tauri/src/: main.rs
